--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <h2>About Me</h2>
             <div class="about-content">
-                <img src="images/student.jpg" alt="Profile Picture" class="profile-pic">
+                <img src="image/student.jpg" alt="Profile Picture" class="profile-pic">
                 <div class="about-text">
                     <p>I'm a passionate computer science student specializing in web development and data analytics at SRM INSTITUTE OF SCIENCE AND TECHNOLOGY. Currently pursuing my degree, I enjoy creating practical solutions through code.</p>
                     <p>When I'm not programming, I love to play carroms , read books.</p>
@@ -81,13 +81,13 @@
             <h2>My Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="images/hqdefault.jpg" alt="Project 1">
+                    <img src="image/hqdefault.jpg" alt="Project 1">
                     <h3>Cash Tally Software</h3>
                     <p>A personal finance management tool that helps users track income, expenses, and savings in real-time. Designed to simplify budgeting for students and small businesses.</p>
                     <a href="#" class="btn">View Project</a>
                 </div>
                 <div class="project-card">
-                    <img src="images/image16.jpg" alt="Project 2">
+                    <img src="image/image16.jpg" alt="Project 2">
                     <h3>Minor Data Visualisation project</h3>
                     <p>An interactive visualization of the UCI Heart Disease Dataset that identifies risk patterns using charts and filters.</p>
                     <a href="#" class="btn">View Project</a>
